@@ -7,22 +7,24 @@
  */
 package org.opendaylight.yangtools.binding.codegen;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.doReturn;
 import static org.opendaylight.yangtools.binding.codegen.GeneratorUtil.createImports;
 import static org.opendaylight.yangtools.binding.model.ri.TypeConstants.PATTERN_CONSTANT_NAME;
 
-import com.google.common.collect.ImmutableList;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import java.util.List;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 import org.opendaylight.yangtools.binding.model.api.AnnotationType;
 import org.opendaylight.yangtools.binding.model.api.Constant;
 import org.opendaylight.yangtools.binding.model.api.GeneratedProperty;
@@ -33,8 +35,9 @@ import org.opendaylight.yangtools.binding.model.api.MethodSignature;
 import org.opendaylight.yangtools.binding.model.api.ParameterizedType;
 import org.opendaylight.yangtools.binding.model.api.Type;
 
-@RunWith(MockitoJUnitRunner.StrictStubs.class)
-public class GeneratorUtilTest {
+@MockitoSettings(strictness = Strictness.LENIENT)
+@ExtendWith(MockitoExtension.class)
+class GeneratorUtilTest {
     private static final JavaTypeName ANNOTATION = JavaTypeName.create("tst.package", "tstAnnotationName");
     private static final JavaTypeName PARAMETERIZED_TYPE = JavaTypeName.create("tst.package", "tstParametrizedType");
     private static final JavaTypeName TYPE = JavaTypeName.create("tst.package", "tstName");
@@ -60,8 +63,8 @@ public class GeneratorUtilTest {
     @Mock
     private GeneratedTransferObject superType;
 
-    @Before
-    public void before() {
+    @BeforeEach
+    void before() {
         doReturn("tst.package").when(parameterizedType).getPackageName();
         doReturn("tstParametrizedType").when(parameterizedType).getName();
         doReturn(PARAMETERIZED_TYPE).when(parameterizedType).getIdentifier();
@@ -70,12 +73,12 @@ public class GeneratorUtilTest {
         doReturn(TYPE).when(type).getIdentifier();
         doReturn(parameterizedType).when(property).getReturnType();
         doReturn(new Type[] { type }).when(parameterizedType).getActualTypeArguments();
-        doReturn(ImmutableList.of(property)).when(enclosedType).getProperties();
+        doReturn(List.of(property)).when(enclosedType).getProperties();
         doReturn(Boolean.TRUE).when(property).isReadOnly();
         doReturn("tst.package").when(enclosedType).getPackageName();
         doReturn("tstName").when(enclosedType).getName();
 
-        doReturn(ImmutableList.of(parameter)).when(methodSignature).getParameters();
+        doReturn(List.of(parameter)).when(methodSignature).getParameters();
 
         doReturn("tst.package").when(annotationType).getPackageName();
         doReturn("tstAnnotationName").when(annotationType).getName();
@@ -83,61 +86,61 @@ public class GeneratorUtilTest {
 
         doReturn(type).when(parameter).getType();
         doReturn(type).when(methodSignature).getReturnType();
-        doReturn(ImmutableList.of(annotationType)).when(methodSignature).getAnnotations();
-        doReturn(ImmutableList.of(methodSignature)).when(enclosedType).getMethodDefinitions();
+        doReturn(List.of(annotationType)).when(methodSignature).getAnnotations();
+        doReturn(List.of(methodSignature)).when(enclosedType).getMethodDefinitions();
 
         doReturn(PATTERN_CONSTANT_NAME).when(constant).getName();
-        doReturn(ImmutableList.of(constant)).when(enclosedType).getConstantDefinitions();
+        doReturn(List.of(constant)).when(enclosedType).getConstantDefinitions();
 
-        doReturn(ImmutableList.of()).when(enclosedType).getEnclosedTypes();
-        doReturn(ImmutableList.of(enclosedType)).when(generatedType).getEnclosedTypes();
+        doReturn(List.of()).when(enclosedType).getEnclosedTypes();
+        doReturn(List.of(enclosedType)).when(generatedType).getEnclosedTypes();
     }
 
     @Test
-    public void createChildImportsTest() {
+    void createChildImportsTest() {
         doReturn("tst.package").when(enclosedType).getPackageName();
         doReturn("tstName").when(enclosedType).getName();
-        doReturn(ImmutableList.of()).when(enclosedType).getEnclosedTypes();
-        doReturn(ImmutableList.of(enclosedType)).when(generatedType).getEnclosedTypes();
+        doReturn(List.of()).when(enclosedType).getEnclosedTypes();
+        doReturn(List.of(enclosedType)).when(generatedType).getEnclosedTypes();
         final var generated = GeneratorUtil.createChildImports(generatedType);
         assertNotNull(generated);
         assertTrue(generated.get("tstName").equals("tst.package"));
     }
 
     @Test
-    public void createImportsWithExceptionTest() {
+    void createImportsWithExceptionTest() {
         final var iae = assertThrows(IllegalArgumentException.class, () -> GeneratorUtil.createImports(null));
         assertEquals("Generated Type cannot be NULL!", iae.getMessage());
     }
 
     @Test
-    public void createImportsTest() {
+    void createImportsTest() {
         final var generated = createImports(generatedType);
         assertNotNull(generated);
         assertEquals(JavaTypeName.create("tst.package", "tstAnnotationName"), generated.get("tstAnnotationName"));
     }
 
     @Test
-    public void isConstantToExceptionTest() {
+    void isConstantToExceptionTest() {
         final var iae = assertThrows(IllegalArgumentException.class, () -> GeneratorUtil.isConstantInTO(null, null));
         assertNull(iae.getMessage());
     }
 
     @Test
-    public void isConstantToTest() {
+    void isConstantToTest() {
         doReturn("tst2").when(constant).getName();
-        doReturn(ImmutableList.of(constant)).when(enclosedType).getConstantDefinitions();
+        doReturn(List.of(constant)).when(enclosedType).getConstantDefinitions();
         assertFalse(GeneratorUtil.isConstantInTO("tst", enclosedType));
     }
 
     @Test
-    public void getPropertiesOfAllParentsTest() {
+    void getPropertiesOfAllParentsTest() {
         doReturn(enclosedType).when(superType).getSuperType();
         assertTrue(GeneratorUtil.getPropertiesOfAllParents(superType).contains(property));
     }
 
     @Test
-    public void getExplicitTypeTest() {
+    void getExplicitTypeTest() {
         assertEquals(annotationType.getName(), GeneratorUtil.getExplicitType(
                 generatedType, annotationType, createImports(generatedType)));
 
